Fix sharebar / blockquote phone layout issue

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -215,6 +215,15 @@ input[type="submit"]
    }
 }
 
+#sharebarx
+{
+   @media (max-width: @screen-sm-min)
+   {
+      display: inline-block !important;
+      float: none !important;
+   }
+}
+
 /* ==========================================================================
    Front Page
    ========================================================================== */
